@uppy/provider-views: fix wrong font for files (#5234)

--- a/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
+++ b/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
@@ -70,6 +70,7 @@
     display: flex;
     align-items: center;
     color: inherit;
+    font-family: $font-family-base;
 
     // For better outline
     padding: 2px;
